cmake_minimum_required(VERSION 3.20)
project(CLanLearn C)

set(CMAKE_C_STANDARD 11)

add_executable(BaseLearn BaseLearn/LinkList.c)
add_executable(BubbleSort SortingAlgorithm/BubbleSort.c)
add_executable(random_number BaseLearn/RandomNumber.c)
add_executable(D1 Recursion/D1.c)
add_executable(D2 Recursion/D2.c)
add_executable(D3 Recursion/D3.c)
add_executable(D4 Recursion/D4.c)
add_executable(D5 Recursion/D5.c)
add_executable(D6 Recursion/D6.c)
add_executable(D7 Recursion/D7.c)
add_executable(D8 Recursion/D8.c)
add_executable(D9 Recursion/D9.c)
add_executable(D10 Recursion/D10.c)
add_executable(D11 Recursion/D11.c)
add_executable(D12 Recursion/D12.c)
add_executable(D13 Recursion/D13.c)
add_executable(D14 Recursion/D14.c)
add_executable(D15 Recursion/D15.c)
add_executable(D16 Recursion/D16.c)
add_executable(D17 Recursion/D17.c)
add_executable(D18 Recursion/D18.c)
add_executable(D19 Recursion/D19.c)
add_executable(D20 Recursion/D20.c)
add_executable(Extra1 Recursion/Extra1.c)
add_executable(Extra2 Recursion/Extra2.c)
add_executable(Diamond BaseLearn/Diamond.c)
add_executable(last BaseLearn/last.c)
add_executable(LinearDemo01 LinearTable/Demo01.c)
add_executable(Array_return_value BaseLearn/Array_return_value.c)
add_executable(Demo02.c LinearTable/Demo02.c)
add_executable(Example LinearTable/Example.c)
add_executable(demo09 homework/10.07/demo09.c)
add_executable(demo13 homework/10.07/demo13.c)
add_executable(demo13_02 homework/10.07/demo13_02.c)
add_executable(demo11_02.c homework/10.07/demo11_02.c)
add_executable(demo12_02 homework/10.07/demo12_02.c)
add_executable(demo10_02 homework/10.07/demo10_02.c)
add_executable(demo01 homework/10.20/demo01.c)
add_executable(demo02 homework/10.20/demo02.c)